fix image overflow

--- a/src/components/ImageInput/styles.module.scss
+++ b/src/components/ImageInput/styles.module.scss
@@ -43,7 +43,8 @@
 
   & > img {
     height: 300px;
-    width: 460px;
+    // width: 460px;
+    width: 100%;
     object-fit: cover;
     border-radius: 4px;
   }
